--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "clsx": "^2.1.1",
     "immer": "^10.1.1",
     "js-cookie": "^3.0.5",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^15.0.0-rc.0",
+    "react": "^19.0.0-rc-1460d67c-20241003",
+    "react-dom": "^19.0.0-rc-1460d67c-20241003",
     "tsc": "^2.0.4",
     "zustand": "^4.5.2"
   },
@@ -25,7 +25,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "^15.0.0-rc.0",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.2.5",
     "sass": "^1.77.2",
