--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "pretty": "npx prettier . --write"
+    "pretty": "npx prettier . --write",
+    "prepare-husky": "husky install .husky"
   },
   "dependencies": {
     "@types/js-cookie": "^3.0.6",
@@ -27,6 +28,8 @@
     "eslint": "^8",
     "eslint-config-next": "^15.0.0-rc.0",
     "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "prettier": "^3.2.5",
     "sass": "^1.77.2",
     "typescript": "^5"
