Main: add react-tooltip to project

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^19.0.0-rc-1460d67c-20241003",
     "react-dom": "^19.0.0-rc-1460d67c-20241003",
     "react-hook-form": "^7.53.0",
+    "react-tooltip": "^5.28.0",
     "tsc": "^2.0.4",
     "yup": "^1.4.0",
     "zustand": "^4.5.2"
