--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@types/js-cookie": "^3.0.6",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.11.9",
     "immer": "^10.1.1",
     "js-cookie": "^3.0.5",
     "next": "^15.0.0-rc.0",
