--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "pretty": "npx prettier . --write",
+    "prepare-css": "find . -name '*.example.scss' -exec sh -c 'cp \"$0\" \"${0%.example.scss}.scss\"' {} \\;",
     "prepare-husky": "npx husky init",
     "prepare": "husky"
   },
