--- a/package.json
+++ b/package.json
@@ -37,13 +37,16 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "^15.0.0-rc.0",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
+    "postcss": "^8.4.49",
     "prettier": "^3.2.5",
     "sass": "^1.77.2",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5"
   },
   "packageManager": "yarn@4.5.1"
