--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@types/js-cookie": "^3.0.6",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.9",
     "immer": "^10.1.1",
@@ -29,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
     "react-tooltip": "^5.28.0",
+    "tailwind-merge": "^2.5.4",
     "tsc": "^2.0.4",
     "yup": "^1.4.0",
     "zustand": "^4.5.2"
