--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/js-cookie": "^3.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -48,7 +49,7 @@
     "postcss": "^8.4.49",
     "prettier": "^3.2.5",
     "sass": "^1.77.2",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5"
   },
   "packageManager": "yarn@4.5.1"
